add reset button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			<div id="thanks">
 				thanks for visit my web page
 			</div>
+			<button id="helpbutton" style="position: absolute;right:0;bottom:0" @click="showHelpScreen">Help</button> 
 			<!-- tooltip component -->
 			<tooltip v-bind:list="listofElements" v-bind:tooltip="messageList" 
 			v-bind:support="supportText" v-bind:bshow="bShowHelp" v-bind:indexvalue="defaultIndex"></tooltip>	
