--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 			<button id="helpbutton" style="position: absolute;right:0;bottom:0" @click="showHelpScreen">Help</button> 
 			<!-- tooltip component -->
 			<tooltip v-bind:list="listofElements" v-bind:tooltip="messageList" 
-			v-bind:support="supportText" v-bind:bshow="bShowHelp" v-bind:indexvalue="defaultIndex"></tooltip>	
+			v-bind:support="supportText" v-bind:bshow="bShowHelp" v-bind:indexvalue="defaultIndex"
+				 ref="tooltipcomponent"></tooltip>	
 			
 		</div>
 	</body>
